--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "liveServer.settings.port": 5501,
-    "python.pythonPath": "C:\\Users\\User\\AppData\\Local\\Programs\\Python\\Python38-32\\python.exe"
+    "python.pythonPath": "C:\\Users\\GE\\AppData\\Local\\Programs\\Python\\Python37-32\\python.exe"
 }
